force-app/main/default/objects/Account/fields/NPA__c.field-meta.xml
<CustomField>
    <fullName>NPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPA</label>
    <type>Checkbox</type>
</CustomField>