force-app/main/default/objects/Account/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <label>Renewal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>