force-app/main/default/objects/Account/fields/Scratch_org_names__c.field-meta.xml
<CustomField>
    <fullName>Scratch_org_names__c</fullName>
    <label>Scratch org names</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tejas</fullName>
            </value>
            <value>
                <fullName>Vicky</fullName>
            </value>
            <value>
                <fullName>Saksham</fullName>
            </value>
            <value>
                <fullName>Vipul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>