force-app/main/default/objects/Account/fields/Scratch_Org_Works__c.field-meta.xml
<CustomField>
    <fullName>Scratch_Org_Works__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Scratch Org Works</label>
    <type>Checkbox</type>
</CustomField>